ingress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  ingress-namespace

---
apiVersion: v1
kind: Namespace
metadata:
  name:  monitoring
