deployment-a.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myapplication
  namespace: ingress-namespace
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: image
        image: nigelpoulton/getting-started-k8s:2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: myapplication1
  namespace: ingress-namespace
spec:
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: image1
        image: nigelpoulton/getting-started-k8s:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metric-app
  namespace: ingress-namespace
spec:
  selector:
    matchLabels:
      app: web2
  replicas: 1
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: metric-app
        image: away168/hello-metrics
        resources:
          limits: 
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
