ingress_a.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ingress-namespace
  name: myingress-a
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  controller: 
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-a
            port: 
              number: 80
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: service-b
            port: 
              number: 80
